# tokenzip

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  install.sh
.claude/hooks/: contextzip-rewrite.sh  contextzip-suggest.sh  tokenzip-rewrite.sh  tokenzip-suggest.sh
.claude/rules/: cli-testing.md  rust-patterns.md  search-strategy.md
.github/workflows/: ci.yml  release.yml
docs/: LAUNCH_PLAYBOOK.md  README.de.md  README.es.md  README.fr.md  README.hi.md  README.ja.md  README.ko.md  README.pt.md  README.ru.md  README.tr.md  README.vi.md  README.zh.md  benchmark-results.md  blog-85-percent-tool-history.md  demo-script.sh  demo.cast  홍보.md
docs/superpowers/plans/: 2026-03-18-contextzip-implementation.md  2026-03-18-tokenzip-implementation.md
docs/superpowers/specs/: 2026-03-18-contextzip-design.md  2026-03-18-tokenzip-design.md
hooks/: contextzip-awareness.md  contextzip-rewrite.sh  opencode-contextzip.ts  opencode-tokenzip.ts  test-contextzip-rewrite.sh  test-tokenzip-rewrite.sh  tokenzip-awareness.md  tokenzip-rewrite.sh
npm/: README.md  package.json
posts/contextzip-launch/: devto-en.md  naver-ko.md
src/: ansi_filter.rs  aws_cmd.rs  cargo_cmd.rs  cc_economics.rs  compact_cmd.rs  config.rs  container.rs  curl_cmd.rs  deps.rs  diff_cmd.rs  docker_cmd.rs  dotnet_cmd.rs  env_cmd.rs  error_cmd.rs  filter.rs  find_cmd.rs  format_cmd.rs  gain.rs  gh_cmd.rs  git.rs  go_cmd.rs  golangci_cmd.rs  grep_cmd.rs  gt_cmd.rs  hook_audit_cmd.rs  hook_check.rs  init.rs  integrity.rs  json_cmd.rs  jsonl_rewriter.rs  kotlin_cmd.rs  lint_cmd.rs  log_cmd.rs  ls.rs  main.rs  mypy_cmd.rs  next_cmd.rs  npm_cmd.rs  pip_cmd.rs  pkg_cmd.rs  (+24 more)
src/discover/: mod.rs  registry.rs  report.rs  rules.rs
src/learn/: report.rs
tests/: integration_tests.rs
(+5 files in other folders)
