[package]
name = "contextzip"
version = "0.1.0"
edition = "2021"
authors = ["Jidong Lee"]
description = "ContextZip - High-performance CLI proxy to minimize LLM token consumption (based on rtk)"
license = "MIT"
homepage = "https://github.com/jee599/contextzip"
repository = "https://github.com/jee599/contextzip"
readme = "README.md"
keywords = ["cli", "llm", "token", "filter", "productivity"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
ignore = "0.4"
walkdir = "2"
regex = "1"
lazy_static = "1.4"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
colored = "2"
dirs = "5"
rusqlite = { version = "0.31", features = ["bundled"] }
toml = "0.8"
chrono = "0.4"
thiserror = "1.0"
tempfile = "3"
sha2 = "0.10"
ureq = "2"
hostname = "0.4"
flate2 = "1.0"
quick-xml = "0.37"
tar = "0.4"
which = "8"
scraper = "0.21"

[build-dependencies]
toml = "0.8"

[dev-dependencies]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

# cargo-deb configuration
[package.metadata.deb]
maintainer = "Jidong Lee"
copyright = "2026 Jidong Lee"
license-file = ["LICENSE", "0"]
extended-description = "contextzip filters and compresses command outputs before they reach your LLM context, saving 60-90% of tokens."
section = "utility"
priority = "optional"
assets = [
    ["target/release/contextzip", "usr/bin/", "755"],
]

# cargo-generate-rpm configuration
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/contextzip", dest = "/usr/bin/contextzip", mode = "755" },
]
